# image-gen-mcp

./: .env.example  .gitignore  README.md  SYSTEM_DESIGN.md  pyproject.toml
docs/: openai_images_api_guide.md
image_gen_mcp/: server.py
image_gen_mcp/config/: settings.py
image_gen_mcp/prompts/data/: templates.json
image_gen_mcp/providers/: base.py  gemini.py  openai.py
image_gen_mcp/resources/models/: gpt-image-1.5.json  gpt-image-2.json  imagen-4-fast.json  imagen-4-ultra.json  imagen-4.json
image_gen_mcp/tools/: image_editing.py  image_generation.py
image_gen_mcp/types/: enums.py
image_gen_mcp/utils/: __init__.py  openai_client.py  validators.py
scripts/: dev.py
tests/: conftest.py
tests/integration/: test_gemini_generation.py  test_image_editing.py  test_prompt_templates.py  test_real_image_generation.py  test_server_integration.py
tests/unit/: test_config.py  test_openai_provider.py  test_server.py  test_tools.py  test_utils.py
