[tool.hatch.build.targets.wheel]
packages = ["image_gen_mcp"]

[project]
name = "image-gen-mcp"
version = "0.1.0"
description = "An MCP (Model Context Protocol) server that integrates with OpenAI's gpt-image-1 model for text-to-image generation services"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "openai",
    "pillow",
    "python-dotenv",
    "pydantic",
    "httpx[socks]",
    "aiofiles",
    "aiohttp",
    "google-auth",
    "google-auth-oauthlib",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "respx>=0.20.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
cache = [
    "redis>=4.0.0",
]

[project.scripts]
image-gen-mcp = "image_gen_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.1",
]
